--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ body {
     margin-bottom: 3rem; }
 
 .logo-heading {
+  margin-left: 3rem;
   font-size: 3rem;
   color: #fff;
   text-transform: uppercase;
